[gd_scene load_steps=5 format=3 uid="uid://db5l4a38dq4e5"]

[ext_resource type="Script" uid="uid://db8l0abn56eac" path="res://scenes/prototypes/WaveformDrawer.gd" id="1_1kvmv"]
[ext_resource type="Script" uid="uid://b30weemd80ifv" path="res://scenes/prototypes/ui_controller.gd" id="1_8s1ke"]
[ext_resource type="Script" uid="uid://dmu67x231363m" path="res://scenes/prototypes/PuzzleManager.gd" id="2_q5h5j"]
[ext_resource type="PackedScene" uid="uid://hp6c2yxgvlp" path="res://scenes/prototypes/TutorialTransition.tscn" id="4_2vdj4"]

[node name="WaveformPrototype" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s1ke")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CounterContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PuzzleCounter" type="RichTextLabel" parent="PanelContainer/VBoxContainer/CounterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Puzzle Counter Text Here"
fit_content = true

[node name="AttemptCounter" type="RichTextLabel" parent="PanelContainer/VBoxContainer/CounterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attempt Counter Text Here"
fit_content = true
horizontal_alignment = 2

[node name="TargetContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TargetLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/TargetContainer"]
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "Target Waveform"
fit_content = true
horizontal_alignment = 1

[node name="TargetWaveForm" type="Control" parent="PanelContainer/VBoxContainer/TargetContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_1kvmv")
line_color = Color(0.9403621, 3.4172833e-06, 3.85046e-07, 1)
scroll_speed = 3.0

[node name="CurrentContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrentLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/CurrentContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Current Waveform"
fit_content = true
horizontal_alignment = 1

[node name="CurrentWaveForm" type="Control" parent="PanelContainer/VBoxContainer/CurrentContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_1kvmv")
is_current = true
comparison_wave = NodePath("../../TargetContainer/TargetWaveForm")
signal_similarity_bar = NodePath("../../ControlsContainer/ControlRowOne/SignalMatchContainer/SignalMatchBar")
signal_lock_button = NodePath("../../ControlsContainer/ControlRowOne/SignalMatchContainer/LockSignalButton")
line_color = Color(0, 0.92156863, 0, 1)
scroll_speed = 3.0

[node name="ControlsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="ControlRowOne" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SignalMatchContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SignalMatchLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne/SignalMatchContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Signal Similarity Score"
fit_content = true
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SignalMatchBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne/SignalMatchContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.32352942
anchor_right = 0.93333334
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="LockSignalButton" type="Button" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne/SignalMatchContainer"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
grow_horizontal = 0
grow_vertical = 2
text = "  LOCK SIGNAL  "

[node name="ControlRowOne3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ScrollSpeedContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollSpeedLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/ScrollSpeedContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Transmission Speed"
fit_content = true
horizontal_alignment = 1

[node name="ScrollSpeedSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/ScrollSpeedContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
value = 5.0
editable = false
scrollable = false
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="TransmissionSpeedHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/ScrollSpeedContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="Phase Shift Container" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PhaseShiftLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/Phase Shift Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Phase Shift"
fit_content = true
horizontal_alignment = 1

[node name="PhaseShiftSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/Phase Shift Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
step = 0.1
value = 5.0
tick_count = 111
ticks_on_borders = true
ticks_position = 2

[node name="PhaseShiftHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/Phase Shift Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="ControlRowOne2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FrequencyContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FrequencyLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/FrequencyContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Base Frequency"
fit_content = true
horizontal_alignment = 1

[node name="FrequencySlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/FrequencyContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
value = 5.0
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="AmplitudeContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AmplitudeLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/AmplitudeContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
text = "Base Amplitude"
fit_content = true
horizontal_alignment = 1

[node name="AmplitudeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/AmplitudeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="ControlRowTwo" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FMRateContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FMRateLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/FMRateContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "FM Rate"
fit_content = true
horizontal_alignment = 1

[node name="FMRateSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/FMRateContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="FMRateHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/FMRateContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="AMRateContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AMRateLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/AMRateContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
text = "AM Rate"
fit_content = true
horizontal_alignment = 1

[node name="AMRateSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/AMRateContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="AMRateHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/AMRateContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="ControlRowThree" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FMStrengthContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FMStrengthLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/FMStrengthContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "FM Strength"
fit_content = true
horizontal_alignment = 1

[node name="FMStrengthSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/FMStrengthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="FMStrengthHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/FMStrengthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="AMStrengthContainer" type="Panel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AMStrengthLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/AMStrengthContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
text = "AM Strength"
fit_content = true
horizontal_alignment = 1

[node name="AMStrengthSlider" type="HSlider" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/AMStrengthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
tick_count = 11
ticks_on_borders = true
ticks_position = 2

[node name="AMStrengthHider" type="ColorRect" parent="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/AMStrengthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="SuccessPanel" type="ColorRect" parent="PanelContainer"]
visible = false
layout_mode = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/SuccessPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/SuccessPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SuccessAttemptsLabel" type="RichTextLabel" parent="PanelContainer/SuccessPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 42
text = "Attempts Text Goes Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/SuccessPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SuccessNextPuzzleButton" type="Button" parent="PanelContainer/SuccessPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Next Puzzle"

[node name="CompletionPanel" type="ColorRect" parent="PanelContainer"]
visible = false
layout_mode = 2
color = Color(0.13333334, 0.13333334, 0.13333334, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CompletionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CompletionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CompletionAttemptsLabel" type="RichTextLabel" parent="PanelContainer/CompletionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 42
text = "Attempts Text Goes Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/CompletionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CompletionRestartButton" type="Button" parent="PanelContainer/CompletionPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Restart"

[node name="PuzzleManager" type="Node" parent="."]
script = ExtResource("2_q5h5j")

[node name="TutorialTransition" parent="." instance=ExtResource("4_2vdj4")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne/SignalMatchContainer/LockSignalButton" to="." method="_on_lock_signal_button_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/ScrollSpeedContainer/ScrollSpeedSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_scroll_speed_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne3/Phase Shift Container/PhaseShiftSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_phase_shift_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/FrequencyContainer/FrequencySlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_base_frequency_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowOne2/AmplitudeContainer/AmplitudeSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_base_amplitude_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/FMRateContainer/FMRateSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_fm_rate_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowTwo/AMRateContainer/AMRateSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_am_rate_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/FMStrengthContainer/FMStrengthSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_fm_strength_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/ControlsContainer/ControlRowThree/AMStrengthContainer/AMStrengthSlider" to="PanelContainer/VBoxContainer/CurrentContainer/CurrentWaveForm" method="_on_am_strength_value_changed"]
[connection signal="pressed" from="PanelContainer/SuccessPanel/VBoxContainer/HBoxContainer2/SuccessNextPuzzleButton" to="." method="_on_success_next_puzzle_button_pressed"]
[connection signal="pressed" from="PanelContainer/CompletionPanel/VBoxContainer/HBoxContainer2/CompletionRestartButton" to="." method="_on_completion_restart_button_pressed"]
